--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-langchain==0.1.16
-langchain-community==0.0.34
-langchain-openai==0.0.8
-faiss-cpu==1.7.4
+langchain
+langchain-community
+langchain-openai
+faiss-cpu
 python-dotenv
 pymupdf
+
